force-app/main/default/objects/Purchaserequestline__c/Purchaserequestline__c.object-meta.xml
<CustomObject>
    <label>Purchase Request Line</label>
    <nameField>
        <displayFormat>PRL-{00000000}</displayFormat>
        <label>Purchase Request Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>