force-app/main/default/objects/Purchaserequestline__c/fields/Check_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Check_Quantity__c</fullName>
    <formula>IF(  Converted_Quantity__c &lt;Quantity__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Quantity</label>
    <type>Checkbox</type>
</CustomField>