force-app/main/default/objects/Purchaserequestline__c/fields/Converted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Quantity__c</fullName>
    <label>Converted Quantity</label>
    <summarizedField>PRLtoPOL__c.Allocated_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>PRLtoPOL__c.POL_Status__c</field>
        <operation>equals</operation>
        <value>Processing, Invoiced, Created, Processing, Converted to PTL</value>
    </summaryFilterItems>
    <summaryForeignKey>PRLtoPOL__c.Purchase_request_line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>