force-app/main/default/objects/Purchaserequestline__c/fields/Purchase_request__c.field-meta.xml
<CustomField>
    <fullName>Purchase_request__c</fullName>
    <label>Purchase Request</label>
    <referenceTo>Purchase_request__c</referenceTo>
    <relationshipLabel>Purchase Request Lines</relationshipLabel>
    <relationshipName>Purchase_request_line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>