force-app/main/default/objects/Purchaserequestline__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Created&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Request_Line_Status</valueSetName>
    </valueSet>
</CustomField>